maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:9: error: not found: value estfaceMur
  while(!estfaceMur()){
         ^