maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  verif()
  while(!estSurBiscuit){
    keepHandOnSideWall()
  }
}
def verif() {
  while(!estfaceMur()){
    avance()
  }
  droite()
}
def keepHandOnSideWall(){
  avance()
  gauche()
  if (estFaceMur){
    droite()
    avance()
  }
  else {
    avance()
  } 
}